# repen

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_report.py
src/repen/: __init__.py  registry.py  report.py
src/repen/adapters/: __init__.py  base.py  image.py  plot.py  registry.py  text.py
src/repen/component/: __init__.py  base.py
src/repen/components/: __init__.py  base.py  generic.py  image.py  layout.py  plot.py  text.py
src/repen/layouts/: __init__.py  base.py  vertical.py
src/repen/renderer/: __init__.py  base.py  registry.py
src/repen/renderer/html/: __init__.py  html.py
src/repen/renderers/: __init__.py  base.py
src/repen/renderers/html/: __init__.py  processor.py  processor_generic.py  processor_layout.py  processor_plot.py  processor_text.py  processor_vertical.py  renderer.py  theme_default.py  themes.py
